added new product functionality

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,53 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.001
+MODULE_VERSION: 0.0039
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
+
+TABLE:tbl_oer_products
+
+TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
+TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
+TEXT: mod_oer_login|Word login|Login
+TEXT: mod_oer_logout|Word logout|Log out
+TEXT: mod_oer_welcome|Word welcome|Welcome
+TEXT: mod_oer_newproduct|Word New product|New product
+TEXT: mod_oer_title|Word title|Title
+TEXT: mod_oer_alttitle|Phrase Alternative title|Alternative Title
+TEXT: mod_oer_thumbnail|Word image|Image
+TEXT: mod_oer_author|Word author|Author
+TEXT: mod_oer_othercontributors|Phrase other contributors|Other contributors
+TEXT: mod_oer_publisher|Word publisher|Publisher
+TEXT: mod_oer_theme|Word publisher|Publisher
+TEXT: mod_oer_keywords|Word keywords|Keywords
+TEXT: mod_oer_language|Word language|Language
+TEXT: mod_oer_select|Word select|Select
+TEXT: mod_oer_english|Word English|English
+TEXT: mod_oer_translation|Word translation|Translation
+TEXT: mod_oer_description|Word description|Description
+TEXT: mod_oer_abstract|Word abstract|Abstract
+TEXT: mod_oer_oerresource|Phrase OER Resource|OER Resource
+TEXT: mod_oer_curriculum|Word curriculum|Curriculum
+TEXT: mod_oer_licence|Word licence|Licence
+TEXT: mod_oer_provenonce|Word provenance|Provenance
+TEXT: mod_oer_accredited|Word accredited|Accredited
+TEXT: mod_oer_accreditationbody|Phrase accreditation body|Accreditation body
+TEXT: mod_oer_accreditationdate|Phrase accreditation date|Accreditation Date
+TEXT: mod_oer_contacts|Word contacts|Contacts
+TEXT: mod_oer_relationtype|Phrase relation tyoe|Relation Type
+TEXT: mod_oer_relatedproduct|Phrase related product|Related product
+TEXT: mod_oer_coverage|Word coverage|Coverage
+TEXT: mod_oer_published|Word published|Published
+TEXT: mod_oer_products|Phrase UNESCO OER PRODUCTS|UNESCO OER PRODUCTS
+TEXT: mod_oer_adaptations|Phrase UNESCO OER ADAPTATIONs|UNESCO OER ADAPTATIONS
+TEXT: mod_oer_groups|Word Groups|Groups
+TEXT: mod_oer_reporting|Word Reporting|Reporting
+TEXT: mod_oer_about|Word about|About
+TEXT: mod_oer_contacts|Word Contacts|Contacts
+TEXT: mod_oer_newproduct|Phrase New Product|New Product
+TEXT: mod_oer_yes|Word Yes|Yes
+TEXT: mod_oer_admin|Word Admin|Admin
+TEXT: mod_oer_no|Word No|No
+TEXT: mod_oer_fieldsrequired|Phrase The following fields are required|The following fields are required
