--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,12 +3,14 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.0039
+MODULE_VERSION: 0.0051
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
 
 TABLE:tbl_oer_products
+TABLE: tbl_oer_umbrella_themes
+TABLE: tbl_oer_themes
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
@@ -22,7 +24,10 @@ TEXT: mod_oer_thumbnail|Word image|Image
 TEXT: mod_oer_author|Word author|Author
 TEXT: mod_oer_othercontributors|Phrase other contributors|Other contributors
 TEXT: mod_oer_publisher|Word publisher|Publisher
-TEXT: mod_oer_theme|Word publisher|Publisher
+TEXT: mod_oer_theme|Word theme|Theme
+TEXT: mod_oer_productthemes|Word product themes|Product themes
+TEXT: mod_oer_umbrellathemes|Word Umbrella themes|Umbrella themes
+TEXT: mod_oer_umbrellatheme|Word Umbrella theme|Umbrella theme
 TEXT: mod_oer_keywords|Word keywords|Keywords
 TEXT: mod_oer_language|Word language|Language
 TEXT: mod_oer_select|Word select|Select
@@ -53,3 +58,10 @@ TEXT: mod_oer_yes|Word Yes|Yes
 TEXT: mod_oer_admin|Word Admin|Admin
 TEXT: mod_oer_no|Word No|No
 TEXT: mod_oer_fieldsrequired|Phrase The following fields are required|The following fields are required
+TEXT: mod_oer_attachingfile|Phrase attaching file|Attaching file
+TEXT: mod_oer_uploadinprogress|Phrase upload in progress|Upload in progress
+TEXT: mod_oer_uploaderror|Phrase file upload error|File upload error
+TEXT: mod_oer_hasbeenuploaded|Phrase has been uploade|has been uploaded
+TEXT: mod_oer_createumbrellatheme|Phrase Create Umbrella Theme|Create umbrella theme
+TEXT: mod_oer_createtheme|Phrase Create Theme|Create theme
+TEXT: mod_oer_count|Word count|Count
