--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,14 +3,15 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.0051
+MODULE_VERSION: 0.0057
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
 
-TABLE:tbl_oer_products
+TABLE: tbl_oer_products
 TABLE: tbl_oer_umbrella_themes
 TABLE: tbl_oer_themes
+TABLE: tbl_oer_product_keywords
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
@@ -65,3 +66,10 @@ TEXT: mod_oer_hasbeenuploaded|Phrase has been uploade|has been uploaded
 TEXT: mod_oer_createumbrellatheme|Phrase Create Umbrella Theme|Create umbrella theme
 TEXT: mod_oer_createtheme|Phrase Create Theme|Create theme
 TEXT: mod_oer_count|Word count|Count
+TEXT: mod_oer_availablethemes|Phrase Available themes|Available themes
+TEXT: mod_oer_selectedthemes| Selected themes|Selected themes
+TEXT: mod_oer_keywords|Word keywords|Keywords
+TEXT: mod_oer_createkeyword|Phrase create keyword|Create keyword
+TEXT: mod_oer_keyword|Word keyword|Keyword
+TEXT: mod_oer_availablekeywords|Phrase available keywords|Available keywords
+TEXT: mod_oer_selectedkeywords|Phrase selected keywords|Selected keywords
