added creative commons dependency

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,10 +3,12 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.0057
+MODULE_VERSION: 0.0059
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
+
+DEPENDS: creativecommons
 
 TABLE: tbl_oer_products
 TABLE: tbl_oer_umbrella_themes
@@ -33,7 +35,7 @@ TEXT: mod_oer_keywords|Word keywords|Keywords
 TEXT: mod_oer_language|Word language|Language
 TEXT: mod_oer_select|Word select|Select
 TEXT: mod_oer_english|Word English|English
-TEXT: mod_oer_translation|Word translation|Translation
+TEXT: mod_oer_translationof|Phrase translation of|Translation of
 TEXT: mod_oer_description|Word description|Description
 TEXT: mod_oer_abstract|Word abstract|Abstract
 TEXT: mod_oer_oerresource|Phrase OER Resource|OER Resource
@@ -73,3 +75,4 @@ TEXT: mod_oer_createkeyword|Phrase create keyword|Create keyword
 TEXT: mod_oer_keyword|Word keyword|Keyword
 TEXT: mod_oer_availablekeywords|Phrase available keywords|Available keywords
 TEXT: mod_oer_selectedkeywords|Phrase selected keywords|Selected keywords
+TEXT: mod_oer_none|Word none|None
