--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.0059
+MODULE_VERSION: 0.0061
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -76,3 +76,12 @@ TEXT: mod_oer_keyword|Word keyword|Keyword
 TEXT: mod_oer_availablekeywords|Phrase available keywords|Available keywords
 TEXT: mod_oer_selectedkeywords|Phrase selected keywords|Selected keywords
 TEXT: mod_oer_none|Word none|None
+TEXT: mod_oer_ispartof|Phrase is part of|Is part of 
+TEXT: mod_oer_requires|Phrase requires|Requires
+TEXT: mod_oer_isrequiredby|Phrase Is required by|Is required by
+TEXT: mod_oer_haspartof|Phrase has part of|Has part of 
+TEXT: mod_oer_references|Word references|References
+TEXT: mod_oer_isversionof|Word references|Is version of
+TEXT: mod_oer_draft|Word draft|Draft
+TEXT: mod_oer_disabled|Word disabled|Disabled
+TEXT: mod_oer_published|Word published|Published
