Added block functionality for groupedit

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,12 +3,15 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.0061
+MODULE_VERSION: 0.0062
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
+
+COMMENT: Blocks used in the OER module
+WIDEBLOCK: groupedit
 
 TABLE: tbl_oer_products
 TABLE: tbl_oer_umbrella_themes
