--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.0062
+MODULE_VERSION: 0.0063
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -17,6 +17,7 @@ TABLE: tbl_oer_products
 TABLE: tbl_oer_umbrella_themes
 TABLE: tbl_oer_themes
 TABLE: tbl_oer_product_keywords
+TABLE: tbl_oer_groups
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
