A bit more work

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.0066
+MODULE_VERSION: 0.0069
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -91,3 +91,31 @@ TEXT: mod_oer_isversionof|Word references|Is version of
 TEXT: mod_oer_draft|Word draft|Draft
 TEXT: mod_oer_disabled|Word disabled|Disabled
 TEXT: mod_oer_published|Word published|Published
+
+COMMENT: ------------- TEXT FOR GROUPS ----------------
+TEXT: mod_oer_group_fieldset1|Heading for group fieldset no1 link|Group Details
+TEXT: mod_oer_group_fieldset2|Heading for group fieldset no2 link|Group Contact Details
+TEXT: mod_oer_group_fieldset3|Heading for group fieldset no3link|Group Geograohical Location
+TEXT: mod_oer_group_fieldset4|Heading for group fieldset no4 link|Group Linked Institution
+TEXT: mod_oer_group_fieldset5|Heading for group fieldset no5 link|Group Descriptions
+TEXT: mod_oer_group_name|Heading for group name input|Group Name
+TEXT: mod_oer_group_website|Heading for group website| Website Link
+TEXT: mod_oer_group_description|Heading for group description|Brief description
+TEXT: mod_oer_group_description_line|Message for descrption line|Please provide your description
+TEXT: mod_oer_group_description_one|Heading for group description|Description Line 1
+TEXT: mod_oer_group_description_two|Heading for group description|Description Line 2
+TEXT: mod_oer_group_description_three|Heading for group description|Description Line 3
+TEXT: mod_oer_group_description_four|Heading for group description|Description Line 4
+TEXT: mod_oer_group_latitude|Heading for group latitude input|Latitude
+TEXT: mod_oer_group_longitude|Heading for group longitued input|Longitude
+TEXT: mod_oer_group_country|Heading for group country input|Country
+TEXT: mod_oer_group_email|Heading for group email|Email
+TEXT: mod_oer_group_address|Heading for group address|Address
+TEXT: mod_oer_group_state|Heading for group state|State
+TEXT: mod_oer_group_city|Heading for group city|City
+TEXT: mod_oer_group_postalcode|Heading for group postal code|Postal Code
+TEXT: mod_oer_group_institution|Heading for group institution link|Institution
+
+COMMENT: CHANGE TO USES
+TEXT: mod_oer_group_cancel_button|Heading for button cancel|Cancel
+TEXT: mod_oer_group_save_button|Heading for button save|Save
