Committing working copy of files for David in case edit while I am out

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.0069
+MODULE_VERSION: 0.0072
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -23,6 +23,9 @@ TABLE: tbl_oer_group_institutions
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
+
+USES: word_save|Save|Save
+
 TEXT: mod_oer_login|Word login|Login
 TEXT: mod_oer_logout|Word logout|Log out
 TEXT: mod_oer_welcome|Word welcome|Welcome
@@ -92,6 +95,31 @@ TEXT: mod_oer_draft|Word draft|Draft
 TEXT: mod_oer_disabled|Word disabled|Disabled
 TEXT: mod_oer_published|Word published|Published
 
+COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????
+TEXT: mod_oer_loclat|Latitude|Latitude
+TEXT: mod_oer_loclong|Longitude|Longitude
+TEXT: mod_oer_country|Country|Country
+TEXT: mod_oer_description|Heading for description input|Description
+TEXT: mod_oer_address1|Heading for street address1 input|Address1
+TEXT: mod_oer_address2|Heading for street address2 input|Address2
+TEXT: mod_oer_address3|Heading for street address3 input|Address3
+TEXT: mod_oer_type|Heading for type input|Type
+TEXT: mod_oer_zip|Heading for zip code input|Zip/Postal code
+TEXT: mod_oer_city|Heading for city input|City
+TEXT: mod_oer_websitelink|Heading for website link input|Website link
+TEXT: mod_oer_keyword1|Heading for first keyword input|Keyword1
+TEXT: mod_oer_keyword2|Heading for second keyword input|Keyword2
+TEXT: mod_oer_linked_groups|Heading for linked groups input|Select linked group
+
+
+
+
+COMMENT: ------------- TEXT FOR INSTITUTIONS ----------
+TEXT: mod_oer_institution_heading_new|Heading for institution entry template|Add a new institution
+TEXT: mod_oer_institution_heading_edit|Heading for institution entry template|Edit existing institution information
+TEXT: mod_oer_institution_name|Heading for institution name input|Institution name
+
+
 COMMENT: ------------- TEXT FOR GROUPS ----------------
 TEXT: mod_oer_group_fieldset1|Heading for group fieldset no1 link|Group Details
 TEXT: mod_oer_group_fieldset2|Heading for group fieldset no2 link|Group Contact Details
@@ -115,6 +143,11 @@ TEXT: mod_oer_group_state|Heading for group state|State
 TEXT: mod_oer_group_city|Heading for group city|City
 TEXT: mod_oer_group_postalcode|Heading for group postal code|Postal Code
 TEXT: mod_oer_group_institution|Heading for group institution link|Institution
+
+COMMENT: ------------ Rules for the group edit form -----------------
+TEXT: mod_oer_grouprule_namerequired|Text indicating that the group name is required|Group name is required; please enter it in the appropriate field.
+
+
 
 COMMENT: CHANGE TO USES
 TEXT: mod_oer_group_cancel_button|Heading for button cancel|Cancel
