Got basic jQuery validate working

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.0072
+MODULE_VERSION: 0.0073
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -19,12 +19,14 @@ TABLE: tbl_oer_themes
 TABLE: tbl_oer_product_keywords
 TABLE: tbl_oer_groups
 TABLE: tbl_oer_institutions
+TABLE: tbl_oer_institution_types
 TABLE: tbl_oer_group_institutions
 
 TEXT: mod_oer_maintitle1|Main title 1|Unesco’s Open Educational Resources Platform
 TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
 
 USES: word_save|Save|Save
+USES: word_description|Description|Description
 
 TEXT: mod_oer_login|Word login|Login
 TEXT: mod_oer_logout|Word logout|Log out
