Ajax edit of saved record and added serialized language elements

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.0073
+MODULE_VERSION: 0.075
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -113,8 +113,9 @@ TEXT: mod_oer_keyword1|Heading for first keyword input|Keyword1
 TEXT: mod_oer_keyword2|Heading for second keyword input|Keyword2
 TEXT: mod_oer_linked_groups|Heading for linked groups input|Select linked group
 
-
-
+COMMENT: ----- SERIALIZE TEXT FOR Javascript MESSAGES ---
+TEXT: mod_oer_status_success|Text for when Ajax save is successful|The record is successfully saved. You may continue editing.
+TEXT: mod_oer_status_fail|Text for when Ajax save fails|The record failed to save for an unknown reason. 
 
 COMMENT: ------------- TEXT FOR INSTITUTIONS ----------
 TEXT: mod_oer_institution_heading_new|Heading for institution entry template|Add a new institution
