Added retrieve for edit

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.075
+MODULE_VERSION: 0.076
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -122,6 +122,9 @@ TEXT: mod_oer_institution_heading_new|Heading for institution entry template|Add
 TEXT: mod_oer_institution_heading_edit|Heading for institution entry template|Edit existing institution information
 TEXT: mod_oer_institution_name|Heading for institution name input|Institution name
 
+TEXT: mod_oer_institutiontype_heading_new|Heading for institution entry template|Add a new institution type
+TEXT: mod_oer_institutiontype_heading_edit|Heading for institution entry template|Edit existing institution information type
+TEXT: mod_oer_institutiontype_name|Heading for institution type input|Institution type
 
 COMMENT: ------------- TEXT FOR GROUPS ----------------
 TEXT: mod_oer_group_fieldset1|Heading for group fieldset no1 link|Group Details
