--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.076
+MODULE_VERSION: 0.0067  
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -96,65 +96,9 @@ TEXT: mod_oer_isversionof|Word references|Is version of
 TEXT: mod_oer_draft|Word draft|Draft
 TEXT: mod_oer_disabled|Word disabled|Disabled
 TEXT: mod_oer_published|Word published|Published
-
-COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????
-TEXT: mod_oer_loclat|Latitude|Latitude
-TEXT: mod_oer_loclong|Longitude|Longitude
-TEXT: mod_oer_country|Country|Country
-TEXT: mod_oer_description|Heading for description input|Description
-TEXT: mod_oer_address1|Heading for street address1 input|Address1
-TEXT: mod_oer_address2|Heading for street address2 input|Address2
-TEXT: mod_oer_address3|Heading for street address3 input|Address3
-TEXT: mod_oer_type|Heading for type input|Type
-TEXT: mod_oer_zip|Heading for zip code input|Zip/Postal code
-TEXT: mod_oer_city|Heading for city input|City
-TEXT: mod_oer_websitelink|Heading for website link input|Website link
-TEXT: mod_oer_keyword1|Heading for first keyword input|Keyword1
-TEXT: mod_oer_keyword2|Heading for second keyword input|Keyword2
-TEXT: mod_oer_linked_groups|Heading for linked groups input|Select linked group
-
-COMMENT: ----- SERIALIZE TEXT FOR Javascript MESSAGES ---
-TEXT: mod_oer_status_success|Text for when Ajax save is successful|The record is successfully saved. You may continue editing.
-TEXT: mod_oer_status_fail|Text for when Ajax save fails|The record failed to save for an unknown reason. 
-
-COMMENT: ------------- TEXT FOR INSTITUTIONS ----------
-TEXT: mod_oer_institution_heading_new|Heading for institution entry template|Add a new institution
-TEXT: mod_oer_institution_heading_edit|Heading for institution entry template|Edit existing institution information
-TEXT: mod_oer_institution_name|Heading for institution name input|Institution name
-
-TEXT: mod_oer_institutiontype_heading_new|Heading for institution entry template|Add a new institution type
-TEXT: mod_oer_institutiontype_heading_edit|Heading for institution entry template|Edit existing institution information type
-TEXT: mod_oer_institutiontype_name|Heading for institution type input|Institution type
-
-COMMENT: ------------- TEXT FOR GROUPS ----------------
-TEXT: mod_oer_group_fieldset1|Heading for group fieldset no1 link|Group Details
-TEXT: mod_oer_group_fieldset2|Heading for group fieldset no2 link|Group Contact Details
-TEXT: mod_oer_group_fieldset3|Heading for group fieldset no3link|Group Geograohical Location
-TEXT: mod_oer_group_fieldset4|Heading for group fieldset no4 link|Group Linked Institution
-TEXT: mod_oer_group_fieldset5|Heading for group fieldset no5 link|Group Descriptions
-TEXT: mod_oer_group_name|Heading for group name input|Group Name
-TEXT: mod_oer_group_website|Heading for group website| Website Link
-TEXT: mod_oer_group_description|Heading for group description|Brief description
-TEXT: mod_oer_group_description_line|Message for descrption line|Please provide your description
-TEXT: mod_oer_group_description_one|Heading for group description|Description Line 1
-TEXT: mod_oer_group_description_two|Heading for group description|Description Line 2
-TEXT: mod_oer_group_description_three|Heading for group description|Description Line 3
-TEXT: mod_oer_group_description_four|Heading for group description|Description Line 4
-TEXT: mod_oer_group_latitude|Heading for group latitude input|Latitude
-TEXT: mod_oer_group_longitude|Heading for group longitued input|Longitude
-TEXT: mod_oer_group_country|Heading for group country input|Country
-TEXT: mod_oer_group_email|Heading for group email|Email
-TEXT: mod_oer_group_address|Heading for group address|Address
-TEXT: mod_oer_group_state|Heading for group state|State
-TEXT: mod_oer_group_city|Heading for group city|City
-TEXT: mod_oer_group_postalcode|Heading for group postal code|Postal Code
-TEXT: mod_oer_group_institution|Heading for group institution link|Institution
-
-COMMENT: ------------ Rules for the group edit form -----------------
-TEXT: mod_oer_grouprule_namerequired|Text indicating that the group name is required|Group name is required; please enter it in the appropriate field.
-
-
-
-COMMENT: CHANGE TO USES
-TEXT: mod_oer_group_cancel_button|Heading for button cancel|Cancel
-TEXT: mod_oer_group_save_button|Heading for button save|Save
+TEXT: mod_oer_required|Word required|Required
+TEXT: mod_oer_saving|Word saving|Saving ..
+TEXT: mod_oer_originalproduct_heading_edit|Phrase Edit original product|Edit original product
+TEXT: mod_oer_originalproduct_heading_new|Phrase New original product|New original product
+TEXT: mod_oer_status_success|Phrase Saved successfully|Saved successfully
+TEXT: mod_oer_status_fail|Phrase Save failed|Save failed
