A bit more progress toward groupedit - save almost working but for upload

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.076
+MODULE_VERSION: 0.078
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -27,6 +27,11 @@ TEXT: mod_oer_maintitle2|Main title 2|UNESCO OER PRODUCTS
 
 USES: word_save|Save|Save
 USES: word_description|Description|Description
+
+
+COMMENT: REUSABLE TEXT - PLEASE REUSE IT!!!!
+TEXT: mod_oer_featured|The word featured|Featured
+TEXT: mod_oer_changeavatar|Label for changing avatar|Change avatar
 
 TEXT: mod_oer_login|Word login|Login
 TEXT: mod_oer_logout|Word logout|Log out
@@ -149,6 +154,7 @@ TEXT: mod_oer_group_state|Heading for group state|State
 TEXT: mod_oer_group_city|Heading for group city|City
 TEXT: mod_oer_group_postalcode|Heading for group postal code|Postal Code
 TEXT: mod_oer_group_institution|Heading for group institution link|Institution
+TEXT: mod_oer_group_locincorrect|Label for location|Please enter your location if the provided location is incorrect 
 
 COMMENT: ------------ Rules for the group edit form -----------------
 TEXT: mod_oer_grouprule_namerequired|Text indicating that the group name is required|Group name is required; please enter it in the appropriate field.
