--- a/beautifier/register.conf
+++ b/beautifier/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Module Beautifier
 MODULE_DESCRIPTION: This module re-formats code of other modules according to PEAR specifications to ensure consistency with framework coding standards. The coding standards that are used, guarantee a consistent look and feel within the code of the entire application. All Chisimba modules should stick to a single style of code, this makes it possible for many different people, from many different backgrounds to all work consistently and easily on a single piece of code. This ensures that the code is infinitely more maintainable for every one working on it, and makes sure that turnaround times for modules and improvements are much quicker, resulting in a superior product all round. This module is specifically a developer tool, and should only be used in a development environment.
 MODULE_AUTHORS: Paul Scott
 MODULE_RELEASEDATE: 2006 08 21
-MODULE_VERSION: 1.61
+MODULE_VERSION: 1.62
 MODULE_PATH: beautifier
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -14,6 +14,8 @@ MODULE_STATUS: stable
 MENU_CATEGORY: developer
 
 TAGS: developer
+
+UPDATE_DESCRIPTION: Removed assigning the return value of new by reference as it is deprecated
 
 TEXT: mod_beautifier_beautifying|beautifying the code|Beautifying
 TEXT: mod_beautifier_patience|please be patient|please be patient...
