added unfinished product fields and formatted display

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.080
+MODULE_VERSION: 0.086
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -108,6 +108,18 @@ TEXT: mod_oer_originalproduct_heading_new_step3|Phrase New original product step
 TEXT: mod_oer_originalproduct_heading_new_step4|Phrase New original product step 4|New original product step 4
 TEXT: mod_oer_originalproduct_heading_new_step5|Phrase New original product step 5|New original product step 5
 TEXT: mod_oer_confirm_delete_original_product|Phrase Are you sure you want to delete this product?|Are you sure you want to delete this product?
+TEXT: mod_oer_sortby|Phrase sort by|Sort by
+TEXT: mod_oer_viewas|Phrase View as|View as
+TEXT: mod_oer_grid|Word Grid|Grid
+TEXT: mod_oer_list|Word List|List
+TEXT: mod_oer_step1|Word Step 1|Step 1
+TEXT: mod_oer_step2|Word Step 2|Step 2
+TEXT: mod_oer_step3|Word Step 3|Step 3
+TEXT: mod_oer_step4|Word Step 4|Step 4
+TEXT: mod_oer_step5|Word Step 5|Step 5
+TEXT: mod_oer_jumpto|Phrase Jump to|Jump to
+TEXT: mod_oer_adaptationscount|Word Adaptations|Adaptations
+
 
 COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????
 TEXT: mod_oer_loclat|Latitude|Latitude
