Added language elements

--- a/switchboard/register.conf
+++ b/switchboard/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Switchboard
 MODULE_DESCRIPTION: A swtichboard for enabling switching between different views.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 4, 2012, 3:53 pm
-MODULE_VERSION: 0.008
+MODULE_VERSION: 0.009
 MODULE_PATH: switchboard
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -31,4 +31,6 @@ TEXT: mod_switchboard_iconurl|Icon URL|Icon URL
 TEXT: mod_switchboard_description|Link description|Link description
 TEXT: mod_switchboard_heading_edit|Edit link|Edit link
 TEXT: mod_switchboard_heading_new|New link|New link
+TEXT: mod_switchboard_blockoverview|Text for the overview block|Click the icons in the switchboard to take you to different areas of this website, or to other websites that we have identified to make up our ecosystem.
+TEXT: mod_switchboard_blocktitle|Title for overview block|About switchboard
 
