--- a/switchboard/register.conf
+++ b/switchboard/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Switchboard
 MODULE_DESCRIPTION: A swtichboard for enabling switching between different views.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 4, 2012, 3:53 pm
-MODULE_VERSION: 0.009
+MODULE_VERSION: 0.010
 MODULE_PATH: switchboard
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -20,6 +20,7 @@ WIDEBLOCK: switchboardtxt
 WIDEBLOCK: switchboardlinks
 BLOCK: switchboardabout
 
+UPDATE_DESCRIPTION: resolved bug - Add capability to delete switchboard links 
 
 TEXT: mod_switchboard_title|Switchboard|Switchboard
 TEXT: mod_switchboard_links|Switchboard links|Switchboard links
