resolved bug - Remove the database driven middle text block. A reinstallation is required.

--- a/switchboard/register.conf
+++ b/switchboard/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Switchboard
 MODULE_DESCRIPTION: A swtichboard for enabling switching between different views.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 4, 2012, 3:53 pm
-MODULE_VERSION: 0.010
+MODULE_VERSION: 0.011
 MODULE_PATH: switchboard
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -11,15 +11,15 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: switchboard
 MODULE_CATEGORY: switchboard
 
-TABLE: tbl_switchboard_text
 TABLE: tbl_switchboard_links
 TABLE: tbl_switchboard_moduleblocks
 
-MENU_CATEGORY: Developer
-WIDEBLOCK: switchboardtxt
+MENU_CATEGORY: Admin
+
 WIDEBLOCK: switchboardlinks
 BLOCK: switchboardabout
 
+UPDATE_DESCRIPTION: resolved bug - Remove the database driven middle text block 
 UPDATE_DESCRIPTION: resolved bug - Add capability to delete switchboard links 
 
 TEXT: mod_switchboard_title|Switchboard|Switchboard
