--- a/switchboard/register.conf
+++ b/switchboard/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Switchboard
 MODULE_DESCRIPTION: A swtichboard for enabling switching between different views.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 4, 2012, 3:53 pm
-MODULE_VERSION: 0.011
+MODULE_VERSION: 0.012
 MODULE_PATH: switchboard
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -19,6 +19,8 @@ MENU_CATEGORY: Admin
 WIDEBLOCK: switchboardlinks
 BLOCK: switchboardabout
 
+
+UPDATE_DESCRIPTION: resolved bug - Add icon does not appear after a save 
 UPDATE_DESCRIPTION: resolved bug - Remove the database driven middle text block 
 UPDATE_DESCRIPTION: resolved bug - Add capability to delete switchboard links 
 
