Fixed no confirmation for delete

--- a/switchboard/register.conf
+++ b/switchboard/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: switchboard
 MODULE_NAME: Switchboard
-MODULE_DESCRIPTION: A swtichboard for enabling switching between different views.
+MODULE_DESCRIPTION: A switchboard for enabling switching between different views.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 4, 2012, 3:53 pm
-MODULE_VERSION: 0.012
+MODULE_VERSION: 0.013
 MODULE_PATH: switchboard
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
