WIP - adding functionality to manage adaptations

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,12 +3,14 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.086
+MODULE_VERSION: 0.087
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
+
+UPDATE_DESCRIPTION: [pwando] - adding functionality to manage adaptations
 
 COMMENT: Blocks used in the OER module
 WIDEBLOCK: groupedit
@@ -74,6 +76,7 @@ TEXT: mod_oer_reporting|Word Reporting|Reporting
 TEXT: mod_oer_about|Word about|About
 TEXT: mod_oer_contacts|Word Contacts|Contacts
 TEXT: mod_oer_newproduct|Phrase New Product|New Product
+TEXT: mod_oer_newadaptation|Phrase New Adaptation|New Adaptation
 TEXT: mod_oer_yes|Word Yes|Yes
 TEXT: mod_oer_admin|Word Admin|Admin
 TEXT: mod_oer_no|Word No|No
