Almost done with adaptation code iteration - 1. todo: Test then consider aspects in specs and integrate

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -10,6 +10,7 @@ MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [pwando] - Almost done with adaptation code iteration - 1. todo: Test then consider aspects in specs and integrate
 UPDATE_DESCRIPTION: [pwando] - adding functionality to manage adaptations
 
 COMMENT: Blocks used in the OER module
