fixed add/edit/delete functionality for an original product

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.087
+MODULE_VERSION: 0.091
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -123,6 +123,7 @@ TEXT: mod_oer_step4|Word Step 4|Step 4
 TEXT: mod_oer_step5|Word Step 5|Step 5
 TEXT: mod_oer_jumpto|Phrase Jump to|Jump to
 TEXT: mod_oer_adaptationscount|Word Adaptations|Adaptations
+TEXT: mod_oer_updateproductpicture|Phrase Update product cover picture|Update product cover picture
 
 
 COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????
