Major refactor of textblocks.

--- a/textblock/register.conf
+++ b/textblock/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Text block
 MODULE_DESCRIPTION: Text blocks for Chisimba
 MODULE_AUTHORS: Derek Keats, Charl Mert
 MODULE_RELEASEDATE: 2007 04 14
-MODULE_VERSION: 0.860
+MODULE_VERSION: 0.878
 MODULE_PATH: textblock
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
@@ -82,7 +82,67 @@ BLOCK: text58
 BLOCK: text59
 BLOCK: text60
 
-UPDATE_DESCRIPTION: Added another textblock slot text7. Also added extra options to allow for more control over block styling, custom css class, css id and title/toggle display now optional.
+BLOCK: widetext1
+BLOCK: widetext2
+BLOCK: widetext3
+BLOCK: widetext4
+BLOCK: widetext5
+BLOCK: widetext6
+BLOCK: widetext7
+BLOCK: widetext8
+BLOCK: widetext9
+BLOCK: widetext10
+BLOCK: widetext11
+BLOCK: widetext12
+BLOCK: widetext13
+BLOCK: widetext14
+BLOCK: widetext15
+BLOCK: widetext16
+BLOCK: widetext17
+BLOCK: widetext18
+BLOCK: widetext19
+BLOCK: widetext20
+BLOCK: widetext21
+BLOCK: widetext22
+BLOCK: widetext23
+BLOCK: widetext24
+BLOCK: widetext25
+BLOCK: widetext26
+BLOCK: widetext27
+BLOCK: widetext28
+BLOCK: widetext29
+BLOCK: widetext30
+BLOCK: widetext31
+BLOCK: widetext32
+BLOCK: widetext33
+BLOCK: widetext34
+BLOCK: widetext35
+BLOCK: widetext36
+BLOCK: widetext37
+BLOCK: widetext38
+BLOCK: widetext39
+BLOCK: widetext40
+BLOCK: widetext41
+BLOCK: widetext42
+BLOCK: widetext43
+BLOCK: widetext44
+BLOCK: widetext45
+BLOCK: widetext46
+BLOCK: widetext47
+BLOCK: widetext48
+BLOCK: widetext49
+BLOCK: widetext50
+BLOCK: widetext51
+BLOCK: widetext52
+BLOCK: widetext53
+BLOCK: widetext54
+BLOCK: widetext55
+BLOCK: widetext56
+BLOCK: widetext57
+BLOCK: widetext58
+BLOCK: widetext59
+BLOCK: widetext60
+
 
 TEXT: mod_textblock_title|Text block|Text block
 TEXT: mod_textblock_blocktext|Block contents|Block contents
@@ -102,9 +162,15 @@ TEXT: mod_textblock_leftside|Instructions for the left column|Select a text bloc
 TEXT: mod_textblock_title|Manage database of text blocks|Manage database of text blocks
 TEXT: mod_textblock_datanotfound|Message to display when data are not found for a user|Data not found for user
 TEXT: mod_textblock_nocontent|Message to display when block has no content|The text block has no contents. The site administrator needs to add contents to this text block or remove it from the display.
-
+TEXT: mod_textblock_heading_text|Text block|Side block
+TEXT: mod_textblock_heading_widetext|Wide text block|Wide block
+TEXT: mod_textblock_block_leftnav_title|Navigate text blocks|Navigate text blocks
+TEXT: mod_textblock_block_howto_title|How to see blocks|How to see blocks
+TEXT: mod_textblock_block_howto|Content explaining how to navigate blocks|Click the title of the block to view the contents. The contents of the bloc will drop down. To hid the contents, click the title again to toggle the block closed. Click the edit or delete icon to edit or delete the block. To add a block, click the green plus icon after the page title.
+TEXT: mod_textblock_block_howtoed_title|How to edit|How to edit
+TEXT: mod_textblock_block_howtoed|Instructions for how to edit|Edit or add a bloc by filling in the required information in the form at the right. Narrow side blocks have the datablock codes of text1 to text60, and wide (middle) blocks have codes of widetext1 to widetext60. Provide a title even if the title will not be displayed. Note that you cannot have duplicate datablock codes. Currently there is no validation of this, this will be added later.
 COMMENT: Data field labels
-TEXT: mod_textblock_field_blockid|The label for the blockid|The datablock to display into (must be in the range text1 to text60)
+TEXT: mod_textblock_field_blockid|The label for the blockid|The datablock to display into (must be in the range text1 to text60, or widetext1 to widetext 60)
 TEXT: mod_textblock_field_title|Label for the title input|Title of block
 TEXT: mod_textblock_field_blocktext|Label for the block contents|Block contents
 TEXT: mod_textblock_css_class|Label for the css Class input|CSS Class (Optional)
@@ -114,4 +180,3 @@ TEXT: mod_textblock_show_title|Label for the show title checkbox|Show the title 
 COMMENT: help elements
 TEXT: help_textblock_about|About Text Block|The management of text blocks displayed on the any pages supporting text blocks.
 TEXT: help_textblock_about_title|Title for about|About Text blocks
-
