Changed the new blocks to wideblocks, accidentally saved them as blocks

--- a/textblock/register.conf
+++ b/textblock/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Text block
 MODULE_DESCRIPTION: Text blocks for Chisimba
 MODULE_AUTHORS: Derek Keats, Charl Mert
 MODULE_RELEASEDATE: 2007 04 14
-MODULE_VERSION: 0.878
+MODULE_VERSION: 0.879
 MODULE_PATH: textblock
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
@@ -82,66 +82,66 @@ BLOCK: text58
 BLOCK: text59
 BLOCK: text60
 
-BLOCK: widetext1
-BLOCK: widetext2
-BLOCK: widetext3
-BLOCK: widetext4
-BLOCK: widetext5
-BLOCK: widetext6
-BLOCK: widetext7
-BLOCK: widetext8
-BLOCK: widetext9
-BLOCK: widetext10
-BLOCK: widetext11
-BLOCK: widetext12
-BLOCK: widetext13
-BLOCK: widetext14
-BLOCK: widetext15
-BLOCK: widetext16
-BLOCK: widetext17
-BLOCK: widetext18
-BLOCK: widetext19
-BLOCK: widetext20
-BLOCK: widetext21
-BLOCK: widetext22
-BLOCK: widetext23
-BLOCK: widetext24
-BLOCK: widetext25
-BLOCK: widetext26
-BLOCK: widetext27
-BLOCK: widetext28
-BLOCK: widetext29
-BLOCK: widetext30
-BLOCK: widetext31
-BLOCK: widetext32
-BLOCK: widetext33
-BLOCK: widetext34
-BLOCK: widetext35
-BLOCK: widetext36
-BLOCK: widetext37
-BLOCK: widetext38
-BLOCK: widetext39
-BLOCK: widetext40
-BLOCK: widetext41
-BLOCK: widetext42
-BLOCK: widetext43
-BLOCK: widetext44
-BLOCK: widetext45
-BLOCK: widetext46
-BLOCK: widetext47
-BLOCK: widetext48
-BLOCK: widetext49
-BLOCK: widetext50
-BLOCK: widetext51
-BLOCK: widetext52
-BLOCK: widetext53
-BLOCK: widetext54
-BLOCK: widetext55
-BLOCK: widetext56
-BLOCK: widetext57
-BLOCK: widetext58
-BLOCK: widetext59
-BLOCK: widetext60
+WIDEBLOCK: widetext1
+WIDEBLOCK: widetext2
+WIDEBLOCK: widetext3
+WIDEBLOCK: widetext4
+WIDEBLOCK: widetext5
+WIDEBLOCK: widetext6
+WIDEBLOCK: widetext7
+WIDEBLOCK: widetext8
+WIDEBLOCK: widetext9
+WIDEBLOCK: widetext10
+WIDEBLOCK: widetext11
+WIDEBLOCK: widetext12
+WIDEBLOCK: widetext13
+WIDEBLOCK: widetext14
+WIDEBLOCK: widetext15
+WIDEBLOCK: widetext16
+WIDEBLOCK: widetext17
+WIDEBLOCK: widetext18
+WIDEBLOCK: widetext19
+WIDEBLOCK: widetext20
+WIDEBLOCK: widetext21
+WIDEBLOCK: widetext22
+WIDEBLOCK: widetext23
+WIDEBLOCK: widetext24
+WIDEBLOCK: widetext25
+WIDEBLOCK: widetext26
+WIDEBLOCK: widetext27
+WIDEBLOCK: widetext28
+WIDEBLOCK: widetext29
+WIDEBLOCK: widetext30
+WIDEBLOCK: widetext31
+WIDEBLOCK: widetext32
+WIDEBLOCK: widetext33
+WIDEBLOCK: widetext34
+WIDEBLOCK: widetext35
+WIDEBLOCK: widetext36
+WIDEBLOCK: widetext37
+WIDEBLOCK: widetext38
+WIDEBLOCK: widetext39
+WIDEBLOCK: widetext40
+WIDEBLOCK: widetext41
+WIDEBLOCK: widetext42
+WIDEBLOCK: widetext43
+WIDEBLOCK: widetext44
+WIDEBLOCK: widetext45
+WIDEBLOCK: widetext46
+WIDEBLOCK: widetext47
+WIDEBLOCK: widetext48
+WIDEBLOCK: widetext49
+WIDEBLOCK: widetext50
+WIDEBLOCK: widetext51
+WIDEBLOCK: widetext52
+WIDEBLOCK: widetext53
+WIDEBLOCK: widetext54
+WIDEBLOCK: widetext55
+WIDEBLOCK: widetext56
+WIDEBLOCK: widetext57
+WIDEBLOCK: widetext58
+WIDEBLOCK: widetext59
+WIDEBLOCK: widetext60
 
 
 TEXT: mod_textblock_title|Text block|Text block
