--- a/textblock/register.conf
+++ b/textblock/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Text block
 MODULE_DESCRIPTION: Text blocks for Chisimba
 MODULE_AUTHORS: Derek Keats, Charl Mert
 MODULE_RELEASEDATE: 2007 04 14
-MODULE_VERSION: 0.879
+MODULE_VERSION: 0.880
 MODULE_PATH: textblock
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
@@ -11,6 +11,7 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: textblock
 MODULE_CATEGORY: utility
 
+UPDATE_DESCRIPTION: Refactored to use a more current approach, added washout parsing to the dropdown.
 UPDATE_DESCRIPTION: [pwando] Commited the previous version. Just run the patch and test. This should restore all the broken blocks.
 UPDATE_DESCRIPTION: Added ability to suppress the title
 UPDATE_DESCRIPTION: Added css_id that was added to sql directly instead of sql update. Please DO NOT apply this update if you textblocks work fine.
