--- a/oer/register.conf
+++ b/oer/register.conf
@@ -10,6 +10,7 @@ MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [pwando] - Allowed users to adopt from product list and to also adopt from adaptations -  todo: test both functionalities  when navigating during add/edit
 UPDATE_DESCRIPTION: [pwando] - Almost done with adaptation code iteration - 1. todo: Test then consider aspects in specs and integrate
 UPDATE_DESCRIPTION: [pwando] - adding functionality to manage adaptations
 
