--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,13 +3,14 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.094
+MODULE_VERSION: 0.095
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [pwando] - Users can now adapt from existing adaptations successfully. To do, fix adapt from product
 UPDATE_DESCRIPTION: [pwando] - Allowed users to adopt from product list and to also adopt from adaptations -  todo: test both functionalities  when navigating during add/edit
 UPDATE_DESCRIPTION: [pwando] - Almost done with adaptation code iteration - 1. todo: Test then consider aspects in specs and integrate
 UPDATE_DESCRIPTION: [pwando] - adding functionality to manage adaptations
@@ -117,6 +118,7 @@ TEXT: mod_oer_sortby|Phrase sort by|Sort by
 TEXT: mod_oer_viewas|Phrase View as|View as
 TEXT: mod_oer_grid|Word Grid|Grid
 TEXT: mod_oer_list|Word List|List
+TEXT: mod_oer_finish|Word Finish|Finish
 TEXT: mod_oer_step1|Word Step 1|Step 1
 TEXT: mod_oer_step2|Word Step 2|Step 2
 TEXT: mod_oer_step3|Word Step 3|Step 3
