[pwando] grouped adaptation language items

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,13 +3,14 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.095
+MODULE_VERSION: 0.096
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [pwando] - Fixed bug in form for adding an adaptation from an existing product. Restored form validations for add/edit adaptation. Changed Fieldset headings
 UPDATE_DESCRIPTION: [pwando] - Users can now adapt from existing adaptations successfully. To do, fix adapt from product
 UPDATE_DESCRIPTION: [pwando] - Allowed users to adopt from product list and to also adopt from adaptations -  todo: test both functionalities  when navigating during add/edit
 UPDATE_DESCRIPTION: [pwando] - Almost done with adaptation code iteration - 1. todo: Test then consider aspects in specs and integrate
@@ -73,13 +74,11 @@ TEXT: mod_oer_relatedproduct|Phrase related product|Related product
 TEXT: mod_oer_coverage|Word coverage|Coverage
 TEXT: mod_oer_published|Word published|Published
 TEXT: mod_oer_products|Phrase UNESCO OER PRODUCTS|UNESCO OER PRODUCTS
-TEXT: mod_oer_adaptations|Phrase UNESCO OER ADAPTATIONs|UNESCO OER ADAPTATIONS
 TEXT: mod_oer_groups|Word Groups|Groups
 TEXT: mod_oer_reporting|Word Reporting|Reporting
 TEXT: mod_oer_about|Word about|About
 TEXT: mod_oer_contacts|Word Contacts|Contacts
 TEXT: mod_oer_newproduct|Phrase New Product|New Product
-TEXT: mod_oer_newadaptation|Phrase New Adaptation|New Adaptation
 TEXT: mod_oer_yes|Word Yes|Yes
 TEXT: mod_oer_admin|Word Admin|Admin
 TEXT: mod_oer_no|Word No|No
@@ -125,12 +124,20 @@ TEXT: mod_oer_step3|Word Step 3|Step 3
 TEXT: mod_oer_step4|Word Step 4|Step 4
 TEXT: mod_oer_step5|Word Step 5|Step 5
 TEXT: mod_oer_jumpto|Phrase Jump to|Jump to
-TEXT: mod_oer_adaptationscount|Word Adaptations|Adaptations
 TEXT: mod_oer_updateproductpicture|Phrase Update product cover picture|Update product cover picture
 TEXT: mod_oer_pleasewait|Phrase please wait|Please wait
 TEXT: mod_oer_saving|Word Saving|Saving
 TEXT: mod_oer_loading|Word Loading|Loading
 
+COMMENT: TEXT FOR ADAPTATIONS
+TEXT: mod_oer_adaptation_heading_step1|Phrase Adaptation step 1|Adaptation step 1
+TEXT: mod_oer_adaptation_heading_step2|Phrase Adaptation step 2|Adaptation step 2
+TEXT: mod_oer_adaptation_heading_step3|Phrase Adaptation step 3|Adaptation step 3
+TEXT: mod_oer_adaptation_heading_step4|Phrase Adaptation step 4|Adaptation step 4
+TEXT: mod_oer_adaptation_heading_step5|Phrase Adaptation step 5|Adaptation step 5
+TEXT: mod_oer_adaptations|Phrase UNESCO OER ADAPTATIONs|UNESCO OER ADAPTATIONS
+TEXT: mod_oer_newadaptation|Phrase New Adaptation|New Adaptation
+TEXT: mod_oer_adaptationscount|Word Adaptations|Adaptations
 
 COMMENT: THIS CRAP IS REPEATED MILLIONS OF TIMES... WHY NOT USES:??????????
 TEXT: mod_oer_loclat|Latitude|Latitude
