added code for original product

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.096
+MODULE_VERSION: 0.097
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -48,6 +48,7 @@ TEXT: mod_oer_title|Word title|Title
 TEXT: mod_oer_alttitle|Phrase Alternative title|Alternative Title
 TEXT: mod_oer_thumbnail|Word image|Image
 TEXT: mod_oer_author|Word author|Author
+TEXT: mod_oer_authors|Word author(s)|Author(s)
 TEXT: mod_oer_othercontributors|Phrase other contributors|Other contributors
 TEXT: mod_oer_publisher|Word publisher|Publisher
 TEXT: mod_oer_theme|Word theme|Theme
@@ -78,6 +79,7 @@ TEXT: mod_oer_groups|Word Groups|Groups
 TEXT: mod_oer_reporting|Word Reporting|Reporting
 TEXT: mod_oer_about|Word about|About
 TEXT: mod_oer_contacts|Word Contacts|Contacts
+TEXT: mod_oer_unesco_contacts|Phrase UNESCO Contacts|UNESCO Contacts
 TEXT: mod_oer_newproduct|Phrase New Product|New Product
 TEXT: mod_oer_yes|Word Yes|Yes
 TEXT: mod_oer_admin|Word Admin|Admin
@@ -107,6 +109,12 @@ TEXT: mod_oer_isversionof|Word references|Is version of
 TEXT: mod_oer_draft|Word draft|Draft
 TEXT: mod_oer_disabled|Word disabled|Disabled
 TEXT: mod_oer_published|Word published|Published
+TEXT: mod_oer_publishedby|Phrase published by|Published by
+TEXT: mod_oer_usercomments|Phrase User comments|User comments
+TEXT: mod_oer_category|Word category|Category
+TEXT: mod_oer_relatednews|Phrase Related news|Related news
+TEXT: mod_oer_relatedevents|Phrase Related events|Related events
+TEXT: mod_oer_selectlangversions|Phrase Select language versions of this product|Select language versions of this product
 TEXT: mod_oer_originalproduct_heading_new_step1|Phrase New original product step 1|New original product step 1
 TEXT: mod_oer_originalproduct_heading_new_step2|Phrase New original product step 2|New original product step 2
 TEXT: mod_oer_originalproduct_heading_new_step3|Phrase New original product step 3|New original product step 3
