[pwando] Users can now view the details of an adaptation by clicking on the respective thumbnail. Still WIP

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -10,6 +10,7 @@ MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [pwando] - Users can now view the details of an adaptation by clicking on the respective thumbnail. Still WIP.
 UPDATE_DESCRIPTION: [pwando] - Fixed bug in form for adding an adaptation from an existing product. Restored form validations for add/edit adaptation. Changed Fieldset headings
 UPDATE_DESCRIPTION: [pwando] - Users can now adapt from existing adaptations successfully. To do, fix adapt from product
 UPDATE_DESCRIPTION: [pwando] - Allowed users to adopt from product list and to also adopt from adaptations -  todo: test both functionalities  when navigating during add/edit
