[pwando] On adaptations - added keywords and linked each to an institution

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: OER
 MODULE_DESCRIPTION: Module for Open Education Resources
 MODULE_AUTHORS:JSCE
 MODULE_RELEASEDATE: 2011 03 08
-MODULE_VERSION: 0.097
+MODULE_VERSION: 0.098
 MODULE_PATH: oer
 MODULE_STATUS: beta
 MENU_CATEGORY: Resources
@@ -57,6 +57,7 @@ TEXT: mod_oer_productthemes|Word product themes|Product themes
 TEXT: mod_oer_umbrellathemes|Word Umbrella themes|Umbrella themes
 TEXT: mod_oer_umbrellatheme|Word Umbrella theme|Umbrella theme
 TEXT: mod_oer_keywords|Word keywords|Keywords
+TEXT: mod_oer_keywordsInstruction|Phrase separate keywords with a comma|Separate keywords with a comma
 TEXT: mod_oer_language|Word language|Language
 TEXT: mod_oer_select|Word select|Select
 TEXT: mod_oer_english|Word English|English
@@ -95,7 +96,6 @@ TEXT: mod_oer_createtheme|Phrase Create Theme|Create theme
 TEXT: mod_oer_count|Word count|Count
 TEXT: mod_oer_availablethemes|Phrase Available themes|Available themes
 TEXT: mod_oer_selectedthemes| Selected themes|Selected themes
-TEXT: mod_oer_keywords|Word keywords|Keywords
 TEXT: mod_oer_createkeyword|Phrase create keyword|Create keyword
 TEXT: mod_oer_keyword|Word keyword|Keyword
 TEXT: mod_oer_availablekeywords|Phrase available keywords|Available keywords
@@ -160,6 +160,7 @@ TEXT: mod_oer_type|Heading for type input|Type
 TEXT: mod_oer_zip|Heading for zip code input|Zip/Postal code
 TEXT: mod_oer_city|Heading for city input|City
 TEXT: mod_oer_websitelink|Heading for website link input|Website link
+TEXT: mod_oer_keyword|Word for keyword input|Keyword
 TEXT: mod_oer_keyword1|Heading for first keyword input|Keyword1
 TEXT: mod_oer_keyword2|Heading for second keyword input|Keyword2
 TEXT: mod_oer_linked_groups|Heading for linked groups input|Select linked group
