[pwando] updated register dot conf with update description

--- a/oer/register.conf
+++ b/oer/register.conf
@@ -10,6 +10,7 @@ MENU_CATEGORY: Resources
 
 DEPENDS: creativecommons
 
+UPDATE_DESCRIPTION: [pwando] - On adaptations - added keywords and linked each to an institution
 UPDATE_DESCRIPTION: [pwando] - Users can now view the details of an adaptation by clicking on the respective thumbnail. Still WIP.
 UPDATE_DESCRIPTION: [pwando] - Fixed bug in form for adding an adaptation from an existing product. Restored form validations for add/edit adaptation. Changed Fieldset headings
 UPDATE_DESCRIPTION: [pwando] - Users can now adapt from existing adaptations successfully. To do, fix adapt from product
